[metadata]
name = tei-transform
author = luise.koehler@bbaw.de

[flake8]
exclude =
  site-packages
filename =
  *.py

[mypy]
ignore_missing_imports=True

[options]
install_requires =
  lxml >= 4.0

packages = find:

[options.packages.find]
exclude =
  tests

[options.entry_points]
node_observer =
  filename-element = tei_transform.filename_element_observer:FilenameElementObserver
  id-attribute = tei_transform.id_attribute_observer:IdAttributeObserver
  notestmt = tei_transform.notestmt_observer:NoteStmtObserver
  schemalocation = tei_transform.schemalocation_observer:SchemaLocationObserver
  teiheader = tei_transform.teiheader_observer:TeiHeaderObserver
