[metadata]
name = tei-transform
author = luise.koehler@bbaw.de

[flake8]
exclude =
  site-packages
filename =
  *.py

[mypy]
ignore_missing_imports=True

[options]
install_requires =
  lxml >= 4.0

packages = find:

[options.packages.find]
exclude =
  tests

[options.entry_points]
console_scripts=
  tei-transform = tei_transform.__main__:main

node_observer =
  filename-element = tei_transform.filename_element_observer:FilenameElementObserver
  id-attribute = tei_transform.id_attribute_observer:IdAttributeObserver
  notesstmt = tei_transform.notesstmt_observer:NotesStmtObserver
  schemalocation = tei_transform.schemalocation_observer:SchemaLocationObserver
  teiheader = tei_transform.teiheader_observer:TeiHeaderObserver
  p-head = tei_transform.head_after_p_element_observer:HeadAfterPElementObserver
  head-type = tei_transform.head_with_type_attr_observer:HeadWithTypeAttrObserver
  tei-ns = tei_transform.tei_namespace_observer:TeiNamespaceObserver
  textclass = tei_transform.textclass_observer:TextclassObserver
  classcode = tei_transform.classcode_observer:ClasscodeObserver
  tail-text = tei_transform.tail_text_observer:TailTextObserver
