[metadata]
name = tei-transform
author = luise.koehler@bbaw.de

[flake8]
exclude =
  site-packages
filename =
  *.py
per-file-ignores =
    tei_transform/observer/__init__.py:F401

[mypy]
ignore_missing_imports=True

[options]
install_requires =
  lxml >= 4.0

packages = find:

[options.packages.find]
exclude =
  tests

[options.entry_points]
console_scripts=
  tei-transform = tei_transform.__main__:main

node_observer =
  filename-element = tei_transform.observer.filename_element_observer:FilenameElementObserver
  id-attribute = tei_transform.observer.id_attribute_observer:IdAttributeObserver
  notesstmt = tei_transform.observer.notesstmt_observer:NotesStmtObserver
  schemalocation = tei_transform.observer.schemalocation_observer:SchemaLocationObserver
  teiheader = tei_transform.observer.teiheader_observer:TeiHeaderObserver
  p-head = tei_transform.observer.head_after_p_element_observer:HeadAfterPElementObserver
  head-type = tei_transform.observer.head_with_type_attr_observer:HeadWithTypeAttrObserver
  tei-ns = tei_transform.observer.tei_namespace_observer:TeiNamespaceObserver
  textclass = tei_transform.observer.textclass_observer:TextclassObserver
  classcode = tei_transform.observer.classcode_observer:ClasscodeObserver
  tail-text = tei_transform.observer.tail_text_observer:TailTextObserver
  p-div-sibling = tei_transform.observer.p_as_div_sibling_observer:PAsDivSiblingObserver
  div-text = tei_transform.observer.div_text_observer:DivTextObserver
  double-item = tei_transform.observer.double_item_observer:DoubleItemObserver
  list-div-sibling = tei_transform.observer.list_as_div_sibling_observer:ListAsDivSiblingObserver
  double-cell = tei_transform.observer.double_cell_observer:DoubleCellObserver
